--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: CopyChangesToMainRepo
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ stage ]
+    branches: [ main ]
   pull_request:
-    branches: [ stage ]
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -30,5 +30,5 @@ jobs:
         dst_path: /content/
         dst_owner: file-format
         dst_repo_name: hugo-docs
-        dst_branch: stage
-        src_branch: stage
+        dst_branch: main
+        src_branch: main
